# tui-translator

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .standards-waivers.txt  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  USAGE.md  build.rs  clippy.toml  config.example.json  deny.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/: actionlint.yaml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  wbs.yml  work_package.md
.github/agents/: crash-root-cause.agent.md  debug.agent.md  dev-leader.agent.md  doublecheck.agent.md  nfr-verification-gate.agent.md  plan.agent.md  qa-leader.agent.md  research-spike.agent.md  spec-clarifier.agent.md  tdd-green.agent.md  tdd-red.agent.md  tdd-refactor.agent.md  test-leader.agent.md  tui-rust-code-reviewer.agent.md  tui-security-auditor.agent.md  tui-soak-monitor.agent.md
.github/hooks/: artifact-guard.py  commit-gate.py  dangerous-commands.py  hooks.json  rust-coding-standards.py  secret-detector.py  verification-gate.py
.github/steps/: config-editor-selection-ux.md  crash-hardening-completion.md  eight-hour-stability-qa-roadmap.md  lf-05-onboarding-wizard.md  linux-cross-platform-quality-roadmap.md  macos-live-controls-qa-release-roadmap.md  project-board-completion-docs.md  project-board-roadmap.md  settings-config-benchmark.md  supertonic-tts-evaluation-roadmap.md
.github/workflows/: ci.yml  contract-weekly.yml  i18n-check.yml  issue-hygiene.yml  proc-opus-gate.yml.disabled  release-gate.yml  release-linux.yml  release-macos.yml  release.yml  security.yml  soak-ladder.yml  standards.yml  vbcable-smoke.yml  windows-gate.yml  windows-selfhosted-test.yml
.hermes/: audit-fix-plan.md
.hermes/plans/: 2026-06-13-fix-progress.md  2026-06-13-fix-windows-com-teardown.md  2026-06-13-windows-runner-setup.md  2026-06-13-windows-teardown-decision.md  2026-06-13-windows-teardown-v2.md  2026-06-13-wp-25-v1-readiness.md
assets/: wtp-bert-mini-manifest.json
assets/licenses/: opus-mt-apache.txt  supertonic-notice.txt
docs/: 00-research-findings.md  01-business-requirements.md  02-google-first-provider.md  03-system-design.md  04-verification-plan.md  05-implementation-roadmap.md  06-github-delivery-backlog.md  07-packaging-verification.md  08-audio-stability-proof.md  09-cpu-model-benchmark.md  10-local-mt-backend-decision.md  10-offline-model-selection.md  11-google-local-benchmark.md  12-virtual-mic-setup.md  13-crash-dump-symbolication.md  engineering-standards.md  macos-setup.md  parity-matrix.md  proc-opus-gate.md  qa8-10-runner-inventory.md  qa8-12-release-gate-orchestration.md  supertonic-release-checklist.md  supertonic-user-guide.md
docs/adr/: 0009-local-quality-upgrade.md  ctrl-03-single-active-voice-invariant.md  i18n.md  jv-01-ja-vi-local-mt-model-shortlist.md  jv-08-default-eligibility-decision.md  jv-10-runtime-engine-spike.md  llm-mt-01-llm-vs-opus-mt-quality-tradeoff.md  llm-mt-02-glossary-term-protection-architecture.md  llm-mt-03-cpu-inference-crate-selection.md  local-tts-model-selection.md  model-01-backend-selection-contract.md  qa8-09-cross-platform-loopback-strategy.md  qa8-13-quality-corpus.md  sb-01-semantic-completeness-architecture.md  supertonic-05-tts-streaming-contract.md  supertonic-11-default-readiness.md  ux-01-adaptive-tui-layout.md  xplat-01-cross-platform-audio-hal.md
docs/architecture/: AUDIT_REPORT.md  AUDIT_SCOREBOARD.md  AUDIT_SCORING.md  CODE_STYLE.md
docs/evidence/: ja-vi-benchmark-corpus-plan.md  jv-06-benchmark.json  jv-07-benchmark.json  jv-08-eligibility-gate.json  jv-08-eligibility-gate.md  jv-10-runtime-spike.json  jv-10-runtime-spike.md  jv-10-runtime-spike.ndjson  jv-google-baseline.json  jv-google-baseline.md  jv-google-baseline.rounds.ndjson  lf-04-benchmark.json  llm-mt-01-bench.json  parity-matrix.json  sb-quality-gate.md
docs/qa8/: QA8-05-runner-v2-partial.md  QA8-05-schema-v2.json  QA8-07-calibration-plan.md
evidence/: voice-a5.json
locales/: en-US.ftl  vi-VN.ftl
scripts/: check-coverage.sh  check-file-size.sh  check-vmic-mvp-evidence.ps1  check-vmic-production-evidence.ps1  entitlements.plist  i18n-check.ps1  jv08_evaluate_gate.py  make-app-bundle.sh  package-linux.sh  package-macos.sh  validate-release-artifact.ps1
src/: audio_device_cli.rs  audio_device_cli_tests.rs  build_info.rs  cloud_setup_cli.rs  feature_flag_tests.rs  llm_startup.rs  local_model_cli.rs  local_model_cli_remove_tests.rs  local_model_cli_tests.rs  local_model_startup.rs  main.rs  main_metrics_tests.rs  metrics_export.rs  provider_hints.rs  quality_preset.rs  quality_preset_env_tests.rs  quality_preset_tests.rs  readiness.rs  readiness_aggregator_tests.rs  runtime_providers.rs  runtime_providers_tests.rs  runtime_recording.rs  runtime_recording_tests.rs  session_export_cli.rs  session_replay_cli.rs  session_replay_cli_tests.rs  sys_caps.rs  sys_caps_tests.rs  system_info_cli.rs  system_info_cli_tests.rs
src/audio/: mod.rs  (+31 more)
tests/: audio_stability.rs  config_dual_mode.rs  contract.rs  ctrl02_voice_hotswap.rs  ctrl03_single_active_voice.rs  dm06_dual_tts_policy.rs  dm07_frame_pacing.rs  google_tts_chunking_test.rs  hc03_recorder_reconfig.rs  hc03b_live_capture_swap.rs  hot_config.rs  hw_smoke_vbcable.rs  i18n_invariants.rs  integration.rs  jv09_mt_manifest_consent.rs  local_model_bootstrap.rs  mt_routing.rs  onboarding_integration.rs  provider_contracts.rs  pty.rs  qa8_07_backpressure_telemetry.rs  qa8_07_cancellation_emit.rs  qa8_07_live_wiring.rs  qa8_07_snapshot_canary.rs  qa8_09_fixture_parity.rs  qa8_13_threshold.rs  qa8_slo_gate_checker.rs  qa8_slo_schema_contract.rs  qa8_soak_schema_contract.rs  readiness_aggregator_test.rs  sb04_false_negative.rs  sb04_latency_gate.rs  sb04_quality_gate.rs  sb05_wtp_inference.rs  sb05_wtp_latency.rs  session_schema.rs  snapshot.rs  soak.rs  soak_runner.rs  storage_metrics.rs  (+14 more)
verification-evidence/: .gitkeep  acceptance-log-template.md  board-snapshot-20260524.json  family-file-map.json  wave-plan.json
(+576 files in other folders)
