[workspace]
members = ["."]
resolver = "2"

[package]
name = "tui-translator"
version = "0.1.4"
edition = "2021"
rust-version = "1.86"
description = "Real-time bilingual subtitles for Zoom meetings — terminal-based, Windows-native"
license = "MIT"
repository = "https://github.com/magicpro97/tui-translator"
readme = "README.md"
autobins = false

[[bin]]
name = "tui-translator"
path = "src/main.rs"

[[bin]]
name = "run_soak"
path = "tests/soak/run_soak.rs"

[[bin]]
name = "audio_stability_proof"
path = "src/bin/audio_stability_proof.rs"

[[bin]]
name = "provider_benchmark"
path = "src/bin/provider_benchmark.rs"

[[bin]]
name = "quality_benchmark"
path = "src/bin/quality_benchmark.rs"

[[bin]]
name = "vbcable_ci_probe"
path = "src/bin/vbcable_ci_probe.rs"

[[bin]]
name = "frame_pacing_bench"
path = "src/bin/frame_pacing_bench.rs"

[[bin]]
name = "eval_session"
path = "src/bin/eval_session.rs"

[[bin]]
name = "mt_bench"
path = "src/bin/mt_bench.rs"

# QA8-02 (issue #500): machine-readable SLO gate checker. Reads the SLO
# spec validated against verification-evidence/qa8/QA8-02-slo-schema.json
# and evaluates gates against soak/release evidence; exits non-zero on any
# blocker failure so nfr-verification-gate can reuse it directly.
[[bin]]
name = "qa8_slo_gate_checker"
path = "src/bin/qa8_slo_gate_checker.rs"

[dependencies]
# Terminal user interface
ratatui = "0.30"
crossterm = "0.29"

# Async runtime (all I/O runs on Tokio)
tokio = { version = "1", features = ["full"] }

# Configuration — config.json loading
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# File-system change notifications for config hot-reload
notify = "6"

# Logging / tracing
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.1"

# HDR latency histogram — compact, high-dynamic-range value recording
hdrhistogram = "7"

# Process resource polling (CPU + RAM) — issues #79 and #82
sysinfo = { version = "0.30", default-features = false }

# HTTP client — REST calls to Google Cloud APIs (STT, MT, TTS)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Base64 encoding — audio payload for Google Speech REST API
base64 = "0.22"

# SHA-256 checksum verification for downloaded local model files (#212)
sha2 = "0.10"
# Hex encoding/decoding — convert SHA-256 digest bytes to/from hex strings (#212)
hex = "0.4"

# whisper-rs — Rust bindings to whisper.cpp for local on-device STT (#213).
# Optional: only compiled when the `local-stt` feature is enabled so the
# default build does not require a C++ toolchain or whisper.cpp binaries.
whisper-rs = { version = "0.12", optional = true }
# ONNX Runtime + pure-Rust SentencePiece for the local OPUS-MT backend (#217).
# Optional so default CI/release builds stay lightweight until local MT is enabled.
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic"], optional = true }
sentencepiece-rs = { version = "0.2.1", optional = true }
tui-input = { version = "0.15.3", default-features = false }
directories = "5"

# I18N-01 (issue #481): cross-platform i18n via Project Fluent.
# `fluent-bundle` provides the catalog runtime; `unic-langid` parses BCP-47
# tags used both by `fluent` and by `AppConfig::locale`.
fluent-bundle = "0.15"
intl-memoizer = "0.5"
unic-langid = { version = "0.9", features = ["macros"] }

[features]
# Enable the local Whisper STT backend (requires whisper.cpp build toolchain).
# This feature gate is reserved for issue #213; issue #212 only adds the
# model-cache infrastructure that #213 will depend on.
local-stt = ["whisper-rs"]
# Enable the local OPUS-MT backend. Model download/version management is handled
# separately by issue #218; this feature only loads verified files already on disk.
local-mt = ["ort", "sentencepiece-rs"]
# Enable the VMIC-A6 automated virtual-cable integration tests. The tests are
# skip-safe on runners without VB-CABLE/VAC and write explicit JSON evidence.
audio-integration = []
# Enable VMIC-B4 production virtual-cable sink contract tests. The mandatory
# tier is hardware-free; optional real-cable probing remains skip-safe.
production-audio = []

[target.'cfg(windows)'.dependencies]
# WASAPI loopback capture (Windows only)
rubato = "0.15"
wasapi = "0.14"
# Audio playback — TTS output via system default audio device (Windows only)
rodio = "0.17"
# Windows thread-scheduling API (SetThreadPriority) for inference priority hints (#232)
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Media", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_ToolHelp"] }

[dev-dependencies]
# Snapshot testing for the TUI layouts
insta = "1"
# Temp files for config tests
tempfile = "3"
# Tokio time-control for retry-backoff tests (start_paused = true)
tokio = { version = "1", features = ["test-util"] }
# Issue #104: PTY harness for Layer-3 terminal behaviour tests (#105–#107)
portable-pty = "0.9"
# VT100 / ANSI terminal emulator used to parse PTY output into a cell grid
vt100 = "0.15"

[profile.release]
# Optimise for small binary size — users download a single .exe
opt-level = "z"
lto = true
codegen-units = 1
strip = true
