[workspace]
members = ["."]
resolver = "2"

[package]
name = "tui-translator"
version = "0.1.12"
edition = "2021"
rust-version = "1.88"
description = "Real-time bilingual subtitles for Zoom meetings — terminal-based, Windows-native"
license = "MIT"
repository = "https://github.com/magicpro97/tui-translator"
readme = "README.md"
autobins = false

[[bin]]
name = "tui-translator"
path = "src/main.rs"

[[bin]]
name = "run_soak"
path = "tests/soak/run_soak.rs"

[[bin]]
name = "audio_stability_proof"
path = "src/bin/audio_stability_proof.rs"

[[bin]]
name = "provider_benchmark"
path = "src/bin/provider_benchmark.rs"

[[bin]]
name = "quality_benchmark"
path = "src/bin/quality_benchmark.rs"

[[bin]]
name = "vbcable_ci_probe"
path = "src/bin/vbcable_ci_probe.rs"

[[bin]]
name = "frame_pacing_bench"
path = "src/bin/frame_pacing_bench.rs"

[[bin]]
name = "eval_session"
path = "src/bin/eval_session.rs"

[[bin]]
name = "mt_bench"
path = "src/bin/mt_bench.rs"

# LLM-MT-01 (issue #696): GGUF LLM benchmark for CPU real-time ja→vi MT.
# Build with: cargo build --features local-llm-mt --bin llm_mt_bench
[[bin]]
name = "llm_mt_bench"
path = "src/bin/llm_mt_bench.rs"

# QA8-02 (issue #500): machine-readable SLO gate checker. Reads the SLO
# spec validated against verification-evidence/qa8/QA8-02-slo-schema.json
# and evaluates gates against soak/release evidence; exits non-zero on any
# blocker failure so nfr-verification-gate can reuse it directly.
[[bin]]
name = "qa8_slo_gate_checker"
path = "src/bin/qa8_slo_gate_checker.rs"

[dependencies]
# Terminal user interface
ratatui = "0.30"
crossterm = "0.29"

# Async runtime (all I/O runs on Tokio)
tokio = { version = "1", features = ["full"] }

# Configuration — config.json loading
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# File-system change notifications for config hot-reload
notify = "6"

# Logging / tracing
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.1"

# HDR latency histogram — compact, high-dynamic-range value recording
hdrhistogram = "7"

# Process resource polling (CPU + RAM) — issues #79 and #82
sysinfo = { version = "0.30", default-features = false }

# HTTP client — REST calls to Google Cloud APIs (STT, MT, TTS)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Base64 encoding — audio payload for Google Speech REST API
base64 = "0.22"

# SHA-256 checksum verification for downloaded local model files (#212)
sha2 = "0.10"
# Hex encoding/decoding — convert SHA-256 digest bytes to/from hex strings (#212)
hex = "0.4"

# whisper-rs — Rust bindings to whisper.cpp for local on-device STT (#213).
# Optional: only compiled when the `local-stt` feature is enabled so the
# default build does not require a C++ toolchain or whisper.cpp binaries.
whisper-rs = { version = "0.12", optional = true }
# ONNX Runtime + pure-Rust SentencePiece for the local OPUS-MT backend (#217).
# Optional so default CI/release builds stay lightweight until local MT is enabled.
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic"], optional = true }
sentencepiece-rs = { version = "0.2.1", optional = true }
# Random number generation for Gaussian noise in Supertonic diffusion inference.
rand = { version = "0.8", optional = true }
# tar + bzip2 for Supertonic-3 archive extraction at startup (issue #692).
# bzip2 uses static linking so no system libbz2 is required.
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4", features = ["static"], optional = true }
# IEEE 754 f16 type — used by wtp-bert-mini ONNX (attention_mask expects fp16).
half = { version = "2", optional = true }
# LLM-MT (issues #696/#698): pure-Rust GGUF inference crate — no cmake, no system DLLs.
# CPU-only by default; Metal acceleration activates automatically on macOS Apple Silicon.
# Feature-gated by `local-llm-mt` so default CI builds stay lightweight.
mistralrs-core = { version = "0.8", optional = true, default-features = false }
# candle-core is a transitive dep of mistralrs-core; declaring it directly lets the
# llm_mt_bench binary use Device::Cpu without pulling in the GPU feature flags.
candle-core = { version = "0.10", optional = true, default-features = false }
# clap is used by the llm_mt_bench benchmark binary for argument parsing.
clap = { version = "4", optional = true, features = ["derive"] }
tui-input = { version = "0.15.3", default-features = false }
directories = "5"

# I18N-01 (issue #481): cross-platform i18n via Project Fluent.
# `fluent-bundle` provides the catalog runtime; `unic-langid` parses BCP-47
# tags used both by `fluent` and by `AppConfig::locale`.
fluent-bundle = "0.15"
intl-memoizer = "0.5"
unic-langid = { version = "0.9", features = ["macros"] }
sys-locale = "0.3.2"

[features]
# Enable the local Whisper STT backend (requires whisper.cpp build toolchain).
# This feature gate is reserved for issue #213; issue #212 only adds the
# model-cache infrastructure that #213 will depend on.
local-stt = ["whisper-rs"]
# Enable Metal GPU acceleration for the local Whisper STT backend on macOS
# Apple Silicon (MACOS-19, issue #659).  Requires the Metal framework from
# Xcode Command Line Tools (macOS 13+).  `local-stt` must also be enabled.
# When Metal initialisation fails at runtime, whisper-rs falls back to CPU.
local-stt-metal = ["local-stt"]
# Enable the local OPUS-MT backend. Model download/version management is handled
# separately by issue #218; this feature only loads verified files already on disk.
local-mt = ["dep:ort", "sentencepiece-rs"]
# Enable the local Supertonic TTS backend (SUPERTONIC-13, issue #630).
# Reuses the ort crate already required by local-mt; no new dep family.
# tar + bzip2 are used by install_archive_bundle (issue #692) to extract the
# Supertonic-3 int8 tar.bz2 archive during startup.  bzip2 is built statically
# so no system libbz2 is required on Windows, macOS, or Linux.
local-tts = ["dep:ort", "rand", "dep:tar", "dep:bzip2"]
# Enable the optional wtp-bert-mini ONNX Tier-3 sentence-completeness classifier
# (SB-05, issue #668).  Requires placing wtp-bert-mini.onnx in the model cache dir.
# Enables the `half` crate for fp16 attention_mask and ort's half-precision support.
semantic-buffering-wtp = ["dep:ort", "ort/half", "dep:half"]
# Enable the VMIC-A6 automated virtual-cable integration tests. The tests are
# skip-safe on runners without VB-CABLE/VAC and write explicit JSON evidence.
audio-integration = []
# Enable VMIC-B4 production virtual-cable sink contract tests. The mandatory
# tier is hardware-free; optional real-cable probing remains skip-safe.
production-audio = []
# Enable the LLM-based machine translation provider (LLM-MT-01 to LLM-MT-05).
# Uses mistralrs-core for pure-Rust GGUF inference on CPU (+ Metal on macOS).
# Requires a GGUF model file (Qwen2.5-0.5B-Instruct Q4_K_M ≈ 600 MB) placed
# in the model cache directory.  Build requires no system libraries beyond the
# Rust toolchain (pure-Rust path; no cmake or llama.cpp).
local-llm-mt = ["dep:mistralrs-core", "dep:candle-core", "dep:clap"]

# ── Release convenience aliases ───────────────────────────────────────────────
# Use these in CI release builds to enable all local-model providers and
# bundle the ORT runtime (download-binaries + copy-dylibs place the ORT
# dylib next to the binary so it can be included in the release package).
release-windows = ["local-stt", "local-mt", "local-tts", "ort/download-binaries", "ort/copy-dylibs"]
release-macos-arm = ["local-stt-metal", "local-mt", "local-tts", "ort/download-binaries", "ort/copy-dylibs"]
release-macos-intel = ["local-stt", "local-mt", "local-tts", "ort/download-binaries", "ort/copy-dylibs"]
release-linux = ["local-stt", "local-mt", "ort/download-binaries", "ort/copy-dylibs"]
# Developer alias: all local-model features without the CI download strategy.
full = ["local-stt", "local-stt-metal", "local-mt", "local-tts"]
# Enable the local LLM-based MT provider (LLM-MT-01 to LLM-MT-03, issues #696/#698).
# Requires mistralrs-core which pulls in a large build-time dependency tree.
# Only needed for GGUF LLM inference; OPUS-MT local-mt is a lighter alternative.

[target.'cfg(windows)'.dependencies]
# WASAPI loopback capture (Windows only)
rubato = "0.15"
wasapi = "0.14"
# Audio playback — TTS output via system default audio device (Windows only)
rodio = "0.17"
# Windows thread-scheduling API (SetThreadPriority) for inference priority hints (#232)
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Media", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_ToolHelp"] }

[target.'cfg(target_os = "macos")'.dependencies]
# CoreAudio loopback capture via BlackHole virtual device (macOS only)
cpal = "0.15"
# Audio resampling: native sample rate → 16 kHz mono (mirrors Windows rubato usage)
rubato = "0.15"
# ScreenCaptureKit audio capture — zero-install system-audio loopback (macOS 13.0+).
# The macos_13_0 feature enables with_captures_audio / with_sample_rate / with_channel_count
# and SCStreamOutputType::Audio. MACOS-10 (issue #641).
# Note: screencapturekit → apple-metal 0.8.x uses macOS 26 SDK APIs (MTLSamplerDescriptor),
# requiring Xcode 26 / macos-26 CI runners to compile. Tracked in #679.
screencapturekit = { version = "6", features = ["macos_13_0"] }
# TTS audio playback via CoreAudio (macOS only). MACOS-17 (issue #657).
# rodio uses cpal internally; the same version as Windows is required so the
# RodioSink shared implementation compiles on both platforms.
rodio = "0.17"
# whisper-rs with Metal GPU acceleration — merged with the base dep in [dependencies]
# (which is optional = true without metal), so Metal is only activated on macOS.
# Gated by `local-stt-metal` feature; see MACOS-19, issue #659.
whisper-rs = { version = "0.12", optional = true, features = ["metal"] }

[dev-dependencies]
# Snapshot testing for the TUI layouts
insta = "1"
# Temp files for config tests
tempfile = "3"
# Tokio time-control for retry-backoff tests (start_paused = true)
tokio = { version = "1", features = ["test-util"] }
# Issue #104: PTY harness for Layer-3 terminal behaviour tests (#105–#107)
portable-pty = "0.9"
# VT100 / ANSI terminal emulator used to parse PTY output into a cell grid
vt100 = "0.15"
# Property-based testing (LLM-MT-02, issue #697)
proptest = "1"

[profile.release]
# Optimise for small binary size — users download a single .exe
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# ── Linux packaging metadata (REL-02 / issue #478) ────────────────────────────
# cargo-deb reads [package.metadata.deb] to build a .deb package
[package.metadata.deb]
name = "tui-translator"
maintainer = "tui-translator contributors <noreply@github.com>"
copyright = "2024, tui-translator contributors"
license-file = ["LICENSE", "0"]
extended-description = """\
Real-time bilingual subtitles for Zoom meetings. Captures system audio via
PipeWire or PulseAudio, transcribes with Google Speech-to-Text, and translates
with Google Translate — all in a terminal TUI."""
depends = "$auto, libpipewire-0.3-0 | libpulse0, libasound2 | libasound2t64"
section = "utils"
priority = "optional"
assets = [
  ["target/x86_64-unknown-linux-gnu/release/tui-translator", "usr/bin/", "755"],
  ["config.example.json", "usr/share/tui-translator/", "644"],
  ["USAGE.md", "usr/share/doc/tui-translator/", "644"],
  ["README.md", "usr/share/doc/tui-translator/", "644"],
]

# cargo-generate-rpm reads [package.metadata.generate-rpm] to build an .rpm package
[package.metadata.generate-rpm]
name = "tui-translator"
license = "MIT"
group = "Applications/Utilities"
summary = "Real-time bilingual subtitles — terminal TUI"
description = """\
Real-time bilingual subtitles for Zoom meetings. Captures system audio via
PipeWire or PulseAudio, transcribes with Google Speech-to-Text, and translates
with Google Translate — all in a terminal TUI."""

[[package.metadata.generate-rpm.assets]]
source = "target/x86_64-unknown-linux-gnu/release/tui-translator"
dest = "/usr/bin/tui-translator"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "config.example.json"
dest = "/usr/share/tui-translator/config.example.json"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "USAGE.md"
dest = "/usr/share/doc/tui-translator/USAGE.md"
mode = "644"
